[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.12.4",features=["blocking"]}
tokio = { version="1.37.0", features=["full"] }
num_cpus = "1.14.0"
url = "2.2"
bytes = "1.6.0"
console = "0.15.8"
